--- a/.github/ISSUE_TEMPLATE/breakout.yml
+++ b/.github/ISSUE_TEMPLATE/breakout.yml
@@ -7,12 +7,12 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this [bug report](https://github.com/tidoust/tpac-breakout-tests/issues)!
   - type: input
     id: contact
     attributes:
       label: Contact Details
-      description: How can we get in touch with you if we need more info?
+      description: How can we get in touch with you if we need [more info](https://github.com/tidoust/tpac-breakout-tests/issues)?
       placeholder: ex. email@example.com
     validations:
       required: false
