Describe how to pick room capacity

--- a/.github/ISSUE_TEMPLATE/breakout.yml
+++ b/.github/ISSUE_TEMPLATE/breakout.yml
@@ -87,7 +87,7 @@ body:
     attributes:
       label: Room capacity
       description: |
-        Room capacity.
+        Room capacity based on your rough estimate of how many people are likely to show up.
       options:
         - Don't know (Default)
         - Small (fewer than 20 people)
