--- a/.github/workflows/validate-session.yml
+++ b/.github/workflows/validate-session.yml
@@ -9,22 +9,35 @@ on:
       - opened
       - reopened
 
-      # ... gets "edited" (title or body updated)
+      # or gets "edited" (title or body updated)
       - edited
-
-      # ... or gets a new label
-      - labeled
 
 jobs:
   validate-session:
     name: Validate breakout session
     runs-on: ubuntu-latest
+    # We're only interested in "session" issues
+    if: ${{ contains(github.event.issue.labels.*.name, 'session' }}
     steps:
+      - name: Setup node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
+      - name: Checkout latest version of release script
+        uses: actions/checkout@v2
+        with:
+          ref: main
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Add issue to TPAC breakout session project
         if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
         uses: actions/add-to-project@v0.5.0
         with:
-          # We're only interested in "session" issues.
+          # Note: This isn't really necessary since we already made sure that
+          # issue is a "session" issue
           labeled: session
 
           # URL of the annual TPAC XXXX breakout project.
@@ -35,6 +48,23 @@ jobs:
           project-url: https://github.com/${{vars.PROJECT_OWNER_TYPE || 'org'}}s/${{vars.PROJECT_OWNER}}/projects/${{vars.PROJECT_NUMBER}}
 
           # A valid Personal Access Token (classic version) with project scope
-          # needs to be added as secret to the repo, because the action uses
-          # the GraphQL API under the hoods.
+          # (and public_repo scope so that labels may be updated) needs to be
+          # added as secret to the repo, because the action uses the GraphQL
+          # API under the hoods.
           github-token: ${{ secrets.GRAPHQL_TOKEN }}
+
+      - name: Dump changes to local file
+        run: echo '${{ toJSON(github.event.issue.changes || "") }}' > changes.json
+        shell: bash
+
+      - name: Validate session and update issue labels accordingly
+        run: node tools/update-session-labels.js ${{ github.event.issue.number }} changes.json
+        env:
+          # See above for PROJECT_XX variables
+          PROJECT_OWNER: ${{ vars.PROJECT_OWNER_TYPE || 'organization' }}/${{ vars.PROJECT_OWNER }}
+          PROJECT_NUMBER: ${{ vars.PROJECT_NUMBER }}
+
+          # Same valid Personal Access Token (classic version) as above, with
+          # project and public_repo scope.
+          GRAPHQL_TOKEN: ${{ secrets.GRAPHQL_TOKEN }}
+
