--- a/.github/workflows/validate-grid.yml
+++ b/.github/workflows/validate-grid.yml
@@ -1,7 +1,16 @@
 name: Validate breakout session grid
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      validation:
+        description: 'Validate only scheduling conflicts (default) or re-validate all sessions'
+        required: true
+        default: 'scheduling'
+        type: choice
+        options:
+          - scheduling
+          - everything
 
 jobs:
   validate-grid:
@@ -22,7 +31,7 @@ jobs:
         run: npm ci
 
       - name: Validate grid and update issue labels accordingly
-        run: node tools/validate-grid.mjs
+        run: node tools/validate-grid.mjs ${{ inputs.validation }}
         env:
           # URL of the annual TPAC XXXX breakout project.
           # The PROJECT_OWNER and PROJECT_NUMBER variables must be defined on
