--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -8,10 +8,10 @@ on:
         required: true
         default: 'all'
         type: string
-      status:
+      calendarstatus:
         description: 'Calendar entry status to use'
         required: true
-        default: 'draft',
+        default: 'draft'
         type: choice
         options:
           - draft
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Convert session issues to calendar entries.
-        run: node tools/update-calendar.mjs ${{ inputs.sessionNumber }} ${{ inputs.status }}
+        run: node tools/update-calendar.mjs ${{ inputs.sessionNumber }} ${{ inputs.calendarstatus }}
         env:
           # URL of the annual TPAC XXXX breakout project.
           # The PROJECT_OWNER and PROJECT_NUMBER variables must be defined on
