Add chair mapping mechanism (through CHAIR_W3CID variable)

--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -66,3 +66,7 @@ jobs:
           # with room names as keys.
           ROOM_ZOOM: ${{ vars.ROOM_ZOOM }}
 
+          # Mapping between chair GitHub identities and W3C IDs must be stored
+          # in a variable. Structure is a JSON object with identities as keys.
+          CHAIR_W3CID: ${{ vars.CHAIR_W3CID }}
+
