--- a/.github/workflows/validate-grid.yml
+++ b/.github/workflows/validate-grid.yml
@@ -49,3 +49,7 @@ jobs:
           # and public_repo scope.
           GRAPHQL_TOKEN: ${{ secrets.GRAPHQL_TOKEN }}
 
+          # Mapping between chair GitHub identities and W3C IDs must be stored
+          # in a variable. Structure is a JSON object with identities as keys.
+          CHAIR_W3CID: ${{ vars.CHAIR_W3CID }}
+
