--- a/.github/workflows/init-labels.yml
+++ b/.github/workflows/init-labels.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Run the init labels script
-        run: node tools/manage-repo-labels.mjs ${{ github.repository }}
+        run: npx init-repo-labels ${{ github.repository }}
         env:
           # A valid Personal Access Token (classic version) with project
           # and public_repo scope.
