--- a/.github/workflows/setup-irc.yml
+++ b/.github/workflows/setup-irc.yml
@@ -3,15 +3,19 @@ name: Setup IRC channels
 on:
   workflow_dispatch:
     inputs:
-      slot:
-        description: 'Slot start time of sessions to initialize (e.g. "9:30"), or "all" to initialize sessions across slots. The job is intended to be run shortly before each slot to init RRSAgent and Zakim. The "all" choice is probably not a good idea unless you also specify a session number: IRC bots leave channels after 2 hours of inactivity!'
-        required: true
-        type: string
       sessionNumber:
         description: 'Session issue number or "all" to initialize IRC channels for all valid sessions in the slot.'
         required: true
         default: 'all'
         type: string
+      dismiss:
+        description: 'Setup channel, or dismiss bots'
+        required: true
+        default: 'setup'
+        type: choice
+        options:
+          - setup
+          - dismiss
 
 jobs:
   update-calendar:
@@ -32,7 +36,7 @@ jobs:
         run: npm ci
 
       - name: Run the setup script
-        run: node tools/setup-irc.mjs ${{ inputs.slot }} ${{ inputs.sessionNumber }}
+        run: npx setup-irc ${{ inputs.sessionNumber }} full ${{ inputs.dismiss }}
         env:
           # URL of the annual TPAC XXXX breakout project.
           # The PROJECT_OWNER and PROJECT_NUMBER variables must be defined on
