--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Convert session issues to calendar entries.
-        run: node tools/update-calendar.mjs ${{ inputs.sessionNumber }} ${{ inputs.calendarstatus }}
+        run: npx update-calendar ${{ inputs.sessionNumber }} ${{ inputs.calendarstatus }}
         env:
           # URL of the annual TPAC XXXX breakout project.
           # The PROJECT_OWNER and PROJECT_NUMBER variables must be defined on
