--- a/.github/workflows/validate-session-manual.yml
+++ b/.github/workflows/validate-session-manual.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
 
       - name: Validate session and update issue labels accordingly
-        run: node tools/validate-session.mjs ${{ inputs.sessionNumber }}
+        run: npx validate-session ${{ inputs.sessionNumber }}
         env:
           # URL of the annual TPAC XXXX breakout project.
           # The PROJECT_OWNER and PROJECT_NUMBER variables must be defined on
