--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "name": "tpac-breakouts",
-  "devDependencies": {
-    "irc": "^0.5.2",
-    "puppeteer": "^20.5.0",
-    "seedrandom": "^3.0.5",
-    "yaml": "^2.3.1"
+  "dependencies": {
+    "tpac-breakouts": "w3c/tpac-breakouts"
   }
 }
