Issue template: adjust description for agenda part

--- a/.github/ISSUE_TEMPLATE/session.yml
+++ b/.github/ISSUE_TEMPLATE/session.yml
@@ -92,6 +92,4 @@ body:
     attributes:
       label: Agenda for the meeting.
       description: |
-        As the agenda becomes available, you will be able to update your session description in markdown to detail the agenda **or** link to an external agenda.
-
-        This part may be completed closer to the meeting.
+        This part may be completed closer to the meeting. As the agenda becomes available, you will be able to update your session description in markdown to **detail the agenda or link to an external agenda**.
