Session creation: add thank you comment automatically

--- a/.github/workflows/validate-session.yml
+++ b/.github/workflows/validate-session.yml
@@ -53,6 +53,18 @@ jobs:
           # API under the hoods.
           github-token: ${{ secrets.GRAPHQL_TOKEN }}
 
+      - name: Add thank you comment with links to documentation
+        if: ${{ github.event.action == 'opened' }}
+        run: gh issue comment "$NUMBER" --body "$BODY"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          NUMBER: ${{ github.event.issue.number }}
+          BODY: >
+            Thank you for proposing a session! Do not expect formal approval; W3C meeting organizers endeavor to schedule all proposed sessions that are [in scope for a breakout](https://github.com/w3c/tpac-breakouts/wiki/Policies#session-scope). Actual scheduling should take place shortly before the meeting.
+
+            You may update the session description as needed and at any time before the meeting, but please keep in mind that tooling relies on issue formatting: [follow the instructions](https://github.com/w3c/tpac-breakouts/wiki/Good-Practices-for-Session-Chairs#how-to-propose-a-session) and leave all headings and other formatting intact in particular. Bots and W3C meeting organizers may also update the description, to fix formatting issues or add links and other relevant information. Please do not revert these changes. Feel free to use comments to raise questions.
+
       - name: Dump changes to local file
         run: echo '${{ toJSON(github.event.issue.changes || '{}') }}' > changes.json
         shell: bash
