--- a/.github/workflows/validate-session.yml
+++ b/.github/workflows/validate-session.yml
@@ -16,8 +16,6 @@ jobs:
   validate-session:
     name: Validate breakout session
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
     # We're only interested in "session" issues
     if: ${{ contains(github.event.issue.labels.*.name, 'session') }}
     steps:
@@ -59,11 +57,13 @@ jobs:
         if: ${{ github.event.action == 'opened' }}
         run: gh issue comment "$NUMBER" --body "$BODY"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GRAPHQL_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
           BODY: >
-            Thank you for proposing a session! Do not expect formal approval; W3C meeting organizers endeavor to schedule all proposed sessions that are [in scope for a breakout](https://github.com/w3c/tpac-breakouts/wiki/Policies#session-scope). Actual scheduling should take place shortly before the meeting.
+            Thank you for proposing a session!
+
+            Do not expect formal approval; W3C meeting organizers endeavor to schedule all proposed sessions that are [in scope for a breakout](https://github.com/w3c/tpac-breakouts/wiki/Policies#session-scope). Actual scheduling should take place shortly before the meeting.
 
             You may update the session description as needed and at any time before the meeting, but please keep in mind that tooling relies on issue formatting: [follow the instructions](https://github.com/w3c/tpac-breakouts/wiki/Good-Practices-for-Session-Chairs#how-to-propose-a-session) and leave all headings and other formatting intact in particular. Bots and W3C meeting organizers may also update the description, to fix formatting issues or add links and other relevant information. Please do not revert these changes. Feel free to use comments to raise questions.
 
