--- a/.github/workflows/setup-irc.yml
+++ b/.github/workflows/setup-irc.yml
@@ -32,8 +32,10 @@ jobs:
         with:
           ref: main
 
+      # Note: no "package-lock.json" and no "npm ci" on purpose to retrieve
+      # latest version of w3c/tpac-breakouts tools (which are unversioned)
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run the setup script
         run: npx setup-irc ${{ inputs.sessionNumber }} full ${{ inputs.dismiss }}
