--- a/.github/workflows/add-minutes.yml
+++ b/.github/workflows/add-minutes.yml
@@ -24,8 +24,10 @@ jobs:
         with:
           ref: main
 
+      # Note: no "package-lock.json" and no "npm ci" on purpose to retrieve
+      # latest version of w3c/tpac-breakouts tools (which are unversioned)
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Link to session minutes
         run: npx add-minutes ${{ inputs.sessionNumber }}
