--- a/.github/workflows/validate-session-manual.yml
+++ b/.github/workflows/validate-session-manual.yml
@@ -23,8 +23,10 @@ jobs:
         with:
           ref: main
 
+      # Note: no "package-lock.json" and no "npm ci" on purpose to retrieve
+      # latest version of w3c/tpac-breakouts tools (which are unversioned)
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Validate session and update issue labels accordingly
         run: npx validate-session ${{ inputs.sessionNumber }}
