--- a/.github/workflows/validate-session.yml
+++ b/.github/workflows/validate-session.yml
@@ -69,13 +69,11 @@ jobs:
         shell: bash
 
       - name: Validate session and update issue labels accordingly
-        run: npx validate-session $NUMBER changes.json
+        run: npx validate-session ${{ github.event.issue.number }} changes.json
         env:
           # See above for PROJECT_XX variables
           PROJECT_OWNER: ${{ vars.PROJECT_OWNER_TYPE || 'organization' }}/${{ vars.PROJECT_OWNER || 'w3c' }}
           PROJECT_NUMBER: ${{ vars.PROJECT_NUMBER }}
-
-          NUMBER: ${{ github.event.issue.number }}
 
           # Same valid Personal Access Token (classic version) as above, with
           # project and public_repo scope.
@@ -86,7 +84,7 @@ jobs:
           CHAIR_W3CID: ${{ vars.CHAIR_W3CID }}
 
       - name: Create/Update calendar entry
-        run: npx update-calendar ${{ inputs.sessionNumber }} quiet
+        run: npx update-calendar ${{ github.event.issue.number }} quiet
         env:
           # See above for PROJECT_XX variables
           PROJECT_OWNER: ${{ vars.PROJECT_OWNER_TYPE || 'organization' }}/${{ vars.PROJECT_OWNER || 'w3c' }}
